--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,23 @@
         <module>gateway</module>
     </modules>
 
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
+
     <dependencyManagement>
+
         <dependencies>
             <dependency>
                 <groupId>com.wei.cn</groupId>
@@ -37,10 +53,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-
-
-
 
 
 </project>
