--- a/may-model/pom.xml
+++ b/may-model/pom.xml
@@ -13,26 +13,25 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>gateway</module>
+        <module>one</module>
     </modules>
-
 
     <dependencies>
         <!--Tomcat替换成undertow-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
+            <!--<exclusions>
                 <exclusion>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-tomcat</artifactId>
                 </exclusion>
-            </exclusions>
+            </exclusions>-->
         </dependency>
-        <dependency>
+       <!-- <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
 
