--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,9 @@
         <module>config</module>
         <module>eureka</module>
         <module>gateway</module>
+<!--
+        <module>temp</module>
+-->
     </modules>
 
 
